Implement correct tenant context switching